--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-bulma-components": "4.0.7",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "solc": "^0.8.6",
     "truffle-hdwallet-provider": "^1.0.17",
